Revision history for Redis

{{$NEXT}}

1.954     2012-10-10T11:16:22Z
    * Support for multi-word commands such as "SCRIPT LOAD".
    * Try another fix for Windows non-blocking reads

1.953     2012-09-05T00:49:11Z
    * Tweak travis.ci setup

1.952     2012-09-04T11:22:18Z
    * Added automatic authentication after connection establishment
    * Support Redis 2.6: Aaron Crane <arc@cpan.org>
    * Attempt to fix non-blocking read on Windows
    * Enable travis.ci support on the repository

1.951     2012-03-13T10:17:09Z
    * Remove Tie::StdHash from our dependencies list, its part of core
      and it creates problems with some CPAN clients

1.950     2012-03-12T13:54:10Z
    * DEPRECATED: the encoding attribute to new() - we will not support
      automatic decoding after 2.000, so please test your code with
      encoding => undef now.
    * Add pipeline support: Aaron Crane arc@github++!
    * Cache AUTOLOAD calls: improves performance a bit, fixes #2
    * Fix: apply reconnect logic to KEYS and INFO
    * Fix: forbid PING and SHUTDOWN in SUBSCRIBE mode
    * Updated docs covering pipelining and multi/exec
    * Updated docs to point users to Github for code and issues

1.926 Wed Jan 11 15:48:11 UTC 2012
    * Fix auto-reconnect when the server is dead or a
      client timeout.
      See https://github.com/melo/perl-redis/issues/1#issuecomment-3444989

1.925 Tue Jan 10 16:02:04 UTC 2012
    * Implemented auto-reconnect
    * Add support for UNIX domain sockets
    * Make REDIS_SERVER work with both TCP and UNIX domain sockets
    * Make the test suite workaround a missing redis-server binary
    * Assorted small bug fixes
    * Improve documentation

1.904 Sat Mar  5 23:10:48 UTC 2011
    * Fix bug with NIL multi-bulk replies (Case 42) RT#64040

1.903 Tue Feb 22 13:04:24 UTC 2011
    * remove the Guard dependency

1.902 Sat Feb  5 12:38:57 UTC 2011
    * fix: ping() no longer dies (RT #62489)
    * fix: shutdown() no longer dies
