@@ -12,21 +12,21 @@ use Digest::SHA1 qw(sha1_hex);
 my ($c, $srv) = redis();
 END { $c->() if $c }
 
+my $o = Redis->new(server => $srv);
 
-ok(my $o = Redis->new(server => $srv), 'connected to our test redis-server');
-ok($o->ping, 'ping');
+## Make sure SCRIPT commands are available
+eval { $o->script_flush };
+plan skip_all => 'This redis-server lacks scripting support' if $@ && $@ =~ /ERR unknown command 'SCRIPT',/;
+
 
 ## Commands related to Lua scripting
 
 # Specifically, these commands test multi-word commands
-
 ok($o->set(foo => 'bar'), 'set foo => bar');
 
-$o->script_flush;
-
-my $script = "return 1";
+my $script     = "return 1";
 my $script_sha = sha1_hex($script);
-my @ret = $o->script_exists($script_sha);
+my @ret        = $o->script_exists($script_sha);
 ok(@ret && $ret[0] == 0, "script exists returns false");
 @ret = $o->script_load($script);
 ok(@ret && $ret[0] eq $script_sha, "script load returns the sha1 of the script");
